fix dark mode

--- a/problem2/src/App.css
+++ b/problem2/src/App.css
@@ -83,6 +83,7 @@ body {
   width: 100%;
   border: none;
   background: transparent;
+  color: #6a7282;
   font-size: 1.25rem;
   text-align: right;
   outline: none;
@@ -582,3 +583,36 @@ body {
     transform: scale(1);
   }
 }
+
+
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
+}
+
+.bg {
+  /* animation:slide 3s ease-in-out infinite alternate; */
+  background-color: red;
+  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:4s;
+}
+
+.bg3 {
+  animation-duration:5s;
+}
+
